scrollbar fix

--- a/react-app/src/components/PurchasedModal/PurchasedModal.css
+++ b/react-app/src/components/PurchasedModal/PurchasedModal.css
@@ -7,6 +7,7 @@
   overflow: scroll;
   padding-right: 0px;
   margin-right: 0px;
+  overflow-x: hidden;
 }
 
 .purWrap {
@@ -40,4 +41,20 @@
   width: 75px;
   height: 75px;
   margin-left: 75%;
+}
+
+.purContain::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.purContain::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f5f5f5;
+}
+
+.purContain::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
 }
